--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,86 @@
-# Disable specific SwiftLint rules globally
-disabled_rules:
-  - closure_parameter_name
+analyzer_rules:
+  - unused_import
 
-# Alternatively, you can enable all rules first and disable specific ones
-disabled_rules:
+disabled_rules: # rules to disable
+  - multiple_closures_with_trailing_closure
+  # - closure_parameter_name
   - trailing_comma
+  - trailing_whitespace
+  - todo # allow TODO comments if your team uses them
 
-# Exclude specific files or directories from linting
+opt_in_rules:
+  - force_unwrapping
+  - fatal_error_message
+  - sorted_imports
+  - switch_case_alignment
+  - vertical_parameter_alignment
+
+
+included:
+  - Sources
+  - Tests
+
 excluded:
+  - Carthage
+  - Pods
+  - build
+  - DerivedData
+
+# Customize specific rules
+line_length:
+  warning: 120
+  error: 200
+  ignores_comments: true
+  ignores_urls: true
+
+type_body_length:
+  warning: 250
+  error: 400
+
+function_body_length:
+  warning: 40
+  error: 60
+
+file_length:
+  warning: 400
+  error: 800
+  ignore_comment_only_lines: true
+
+identifier_name:
+  min_length:
+    warning: 3
+    error: 2
+  max_length:
+    warning: 40
+    error: 60
+  excluded:
+    - id
+    - x
+    - y
+    - URL
+    - db
+
+force_unwrapping:
+  severity: error
+
+
+trailing_newline:
+  severity: warning
+
+empty_enum_arguments:
+  severity: warning
+
+nesting:
+  type_level: 1
+
+cyclomatic_complexity:
+  warning: 10
+  error: 20
+
+# For test files
+excluded:
+  - WatchlyTests
+  - WatchlyUITests
+
+included:
+  - Watchly 
